# RocketISO

./: .gitignore  ERRATA.md  README.md  copy_firefox  copy_osu  do_flash  do_test  etcdiff  etcdiff_ovl  gencfg  gencfg_ovl  genenter  geniso  genportage  genrebuild  genrepos  genroot  genusb  info_firejail  ovldiff  ovlpack  sync  world  world_sets
docs/: BUILDING.md  ERRATA-2024.md  ERRATA-2025.md  HINTS-2024.md  HINTS-2025.md  README-2024.html  README-2025.html  RELEASE-2024.md  RELEASE-2025.md
files/: applist  firejail.txt  live  osusongs
files/readme/: Makefile.am  configure.ac
files/readme/data/: readme.desktop  readme.in  readme.man
files/rocketset/: Makefile.am  configure.ac
files/rocketset/data/: osu-xinput-mode  rocket-setdpi  rocket-setlang
